[package]
name = "rust-hash-sum"
version = "4.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = [ "window-all", "dialog-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
md-5 = "0.10"
# Use pure Rust implementations (still fast, Windows compatible)
sha2 = "0.10"
sha1 = "0.10"
blake3 = { version = "1.8.2", features = ["rayon", "mmap"] }
tokio = { version = "1.47", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
csv = "1.3"
memmap2 = "0.9.7"
rayon = "1.11"
ahash = "0.8"
# Additional performance packages
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
# Windows-specific flags for faster file IO (sequential scan hint)
windows-sys = { version = "0.52.0", features = ["Win32_Storage_FileSystem"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = "fat" 
codegen-units = 1
panic = "abort"
strip = true
# Maximum CPU optimizations - targeting modern x86_64
# Additional performance flags
overflow-checks = false
debug-assertions = false

# Force native CPU optimization at runtime
[target.'cfg(target_arch = "x86_64")']
# rustflags must live in a Cargo config file, not Cargo.toml.
# See https://doc.rust-lang.org/cargo/reference/config.html
